# MeowField_AutoPlay_Lite

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  build.bat
apps/backend/: backend.spec  pyproject.toml
apps/backend/game_configs/: identity-v-flute.json  identity-v-harp.json  identity-v-piano.json  open-space-drums.json  open-space-microphone.json  open-space-piano.json  yihuan-piano.json
apps/backend/src/app/: main.py
apps/backend/src/chords/: detect.py
apps/backend/src/converter/: __init__.py  audio_to_midi.py
apps/backend/src/games/: __init__.py  manager.py
apps/backend/src/hotkeys/: manager.py
apps/backend/src/mapping/: notes.py
apps/backend/src/midi/: parser.py
apps/backend/src/models/: core.py
apps/backend/src/player/: engine.py  events.py
apps/backend/src/runtime/: __init__.py  paths.py
apps/backend/src/win/: focus.py  keyboard_map.py  message_sender.py  network_latency.py  ntp_sync.py  sendinput.py
apps/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/frontend/electron/: main.mjs  preload.cjs  preload.mjs
apps/frontend/src/renderer/: types.d.ts
apps/frontend/src/renderer/api/: ws.ts
apps/frontend/src/renderer/i18n/: en-US.ts  index.ts  zh-CN.ts
apps/frontend/src/renderer/ui/: App.tsx  MidiEditor.tsx  VirtualKeyboard.tsx  Visualizer.tsx
apps/frontend/src/renderer/utils/: storage.ts
