[project]
name = "meowfield-autoplayer-lite-backend"
version = "1.1.3"
description = "Backend for MeowField Autoplayer Lite"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "mido>=1.3.2",
  "keyboard>=0.13.5",
]

[project.scripts]
meowfield-autoplayer-lite-backend = "src.app.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
